<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RecyclerViewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recyclerToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mainColor"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:clipToPadding="true"
        android:scrollbars="vertical"/>

    <!-- ChipGroup for Event Type Filters -->


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filter_chip_group_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recyclerToolbar"
        android:layout_marginTop="-2dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_braking"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/braking"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipEndPadding="12dp"
            app:chipIcon="@drawable/ic_braking"
            app:chipIconSize="24dp"
            app:chipIconVisible="true"
            app:chipMinHeight="40dp"
            app:chipStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_acceleration"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceleration"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipIcon="@drawable/ic_acceleration"
            app:chipIconSize="24dp"
            app:chipIconVisible="true"
            app:chipMinHeight="40dp"
            app:chipStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_speed_limit"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed_limits"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipIcon="@drawable/ic_speed_limit"
            app:chipIconSize="24dp"
            app:chipIconVisible="true"
            app:chipMinHeight="40dp"
            app:chipStartPadding="16dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pothole"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/potholes"
            app:checkedIconVisible="false"
            app:chipBackgroundColor="@color/chip_background_color"
            app:chipIcon="@drawable/ic_pothole"
            app:chipIconSize="24dp"
            app:chipIconVisible="true"
            app:chipMinHeight="40dp"
            app:chipStartPadding="16dp" />
    </com.google.android.material.chip.ChipGroup>

    <!-- Separator Line -->
    <View
        android:id="@+id/chip_recycler_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/filter_chip_group_recycler"
        android:background="@color/grey"
        android:layout_marginTop="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/filter_chip_group_recycler"
        android:layout_marginTop="24dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbars="vertical" />


</RelativeLayout>